--- a/index.html
+++ b/index.html
@@ -1,30 +1,38 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Angularjs Test Apps</title>
-		<script type="text/javascript" src="angular.min.js"></script>
-		<script type="text/javascript" src="scripts/controllers/firstCtrl.js"></script>
-		<script type="text/javascript" src="scripts/controllers/secondCtrl.js"></script>
-		<script type="text/javascript" src="scripts/services/BtwnCtrl.js"></script>
-		<script type="text/javascript" src="bower_components/angular-socket-io/socket.js"></script>
-		
-	</head>
-	<body>
-		<div ng-app="testApp">
-			
-			<div ng-controller="firstCtrl">
-				<input type="text" ng-model="data.message">
-				<span>From First Controller :{{data.message}}</span>	
-			</div>
-			
-			<div ng-controller="secondCtrl">
-				<input type="text" ng-model="data.message">
-				<span>From Second Controller :{{data.message}}</span>	
-			</div>
-			<!-- <h3 ng-bind="data.name"></h3> -->
-		</div>	
-			
-	</body>
+    <script data-require="angular.js@*" data-semver="1.3.0-beta.5" src="https://code.angularjs.org/1.3.0-beta.5/angular.js"></script>
+    <script data-require="react@*" data-semver="0.10.0" src="http://fb.me/react-0.10.0.js"></script>
+    <link rel="stylesheet" href="style.css" />
+    <script src="myComponent.js"></script>
+    <script src="scripts.js"></script>
+  </head>
+
+  <body ng-app="fasterAngular">
+    <h1>Faster Rendering With ReactJs</h1>
+    <div ng-controller="mycontroller">
+    	<div>
+    		<button ng-click="refresh()">Refresh Data</button>
+    	</div>
+        
+        <div style="width:500px;float:left">
+        	<table>
+	          <tr ng-repeat="line in data">
+	            <td>{{line[0]}}</td>
+	            <td>{{line[1]}}</td>
+	            <td>{{line[2]}}</td>
+	            <td>{{line[3]}}</td>
+	            <td>{{line[4]}}</td>
+	          </tr>
+
+        	</table>
+        </div>
+        <<!-- div style="margin-left:1000px">
+        	<fast-repeat data='data'/>
+        </div> -->
+        
+    </div>
+  </body>
 	
 	
 </html>
